# balance-coop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml.prod  docker-compose.yaml  docker-compose.yaml.prod  main.py  pyproject.toml
api/: __init__.py  odoo.py  printer.py
api/bizerba/: __init__.py  message.py  screen.py
api/odoo/: __init__.py
api/scale/: __init__.py  digits.py  screen.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  main.js
client/src/components/: Keyboard.vue  Main.vue  Product.vue  Products.vue  Scale.vue
client/src/mixin/: euro.js  print.js  url.js
client/src/plugins/: vuetify.js
client/src/store/: index.js  products.js  scale.js  ticket.js
