[tool.poetry]
name = "balance-coop"
version = "0.1.0"
description = ""
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Werkzeug = "^0.16.1"
aio-odoorpc-base = "^3.0.4"
httpx = "^0.16.1"
tinydb = "^4.3.0"
Flask-socketio = "v4.3.2"
gunicorn = "^20.0.4"
python-escpos = "^3.0a8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
