[tool.poetry]
name = "balance-coop"
version = "0.1.0"
description = ""
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
packages = [
    { include = "main.py" },
    { include = "api" },
]

[tool.poetry.dependencies]
python = "^3.8"
Werkzeug = "^0.16.1"
Flask-socketio = "v4.3.2"
python-escpos = "^3.0a8"
validx = "^0.7"
dotmap = "^1.3.23"
"ruamel.yaml" = "^0.17.2"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.3"
importlib-metadata = "^3.7.0"

[tool.poetry.scripts]
balance-coop = 'main:main'
[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
